# endgame

./: .gitignore  CONTRIBUTING.md  ETHICS.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum  install.sh  test_gui_api.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/agent-c/: agent.c  api_resolve.c  api_resolve.h  b64.c  b64.h  commands.c  commands.h  config.h  crypto.c  crypto.h  evasion.c  evasion.h  transport.c  transport.h
agents/agent-go/: ads_stub.go  ads_windows.go  beacon.go  bof_stub.go  bof_windows.go  browsercreds_stub.go  browsercreds_windows.go  clip_monitor_stub.go  clip_monitor_windows.go  clr_fork_windows.go  clr_resetdll_windows.go  clr_stub.go  clr_windows.go  commands.go  commands_stub.go  commands_windows.go  (+95 more)
agents/agent-rust/: Cargo.toml  build.rs
agents/agent-rust/.cargo/: config.toml
agents/agent-rust/src/: commands.rs  crypto.rs  main.rs  transport.rs
bofs/: README.md
certs/: agent.crt  agent.key  ca.crt  ca.srl  server.crt
cli/: operator.go
client/: ai.go  ai_gui.go  certipy.go  cli.go  client.go  color.go  creds.go  expose.go  gui.go  gui_cmd.go  impacket.go  local.go  report.go
docs/: CNAME  index.html  rdp-inject.html
profile/: profile.go
server/: bloodhound.go  certs.go  chat.go  crypto.go  db.go  delivery.go  dns.go  ext_c2.go  gen_docm.py  gui.go  http_doh.go  http_handler.go  operator_api.go  operators_online.go  payload.go  payload_lnk.go  poly_encoder.go  profiles.go  rsocks.go  server.go  stage.go  stager.go  stager_run.go  tcp_listener.go  webhooks.go  wstunnel.go
(+248 files in other folders)
